@@ -1,3 +1,7 @@
+2004-01-12  Ben Elliston  <bje@wasabisystems.com>
+
+	* baseboards/frv-sim.exp: Remove reference to devo/sim.
+
 2003-12-03  Ben Elliston  <bje@wasabisystems.com>
 
 	* testsuite/runtest.all/utils.test: Fix a test for proc find which
